modified berliz logo

--- a/src/app/footer/sub-footer/sub-footer.component.html
+++ b/src/app/footer/sub-footer/sub-footer.component.html
@@ -5,7 +5,7 @@
         </h3>
         <h3 class="text-white">
             Developed by
-            <span class="text-red-600 font-bold font-sans cursor-pointer" [routerLink]="['/blessed-tasela']">
+            <span class="text-red-600 font-bold font-sans cursor-pointer" (click)="openBlessedTasela()">
                 Blessed Tasela
             </span>
         </h3>
