--- a/src/app/navbar/navigation-bar/navigation-bar.component.html
+++ b/src/app/navbar/navigation-bar/navigation-bar.component.html
@@ -1,7 +1,7 @@
 <nav class="py-0 bg-white shadow flex items-center justify-between nav-menu w-full">
     <div class="flex justify-between items-center w-full justify-end">
         <div class="text-xl font-sans cursor-pointer">
-            <img class="h-16 inline" src="../../../assets/landing/logo.jpg" [routerLink]="['/home']">
+            <img style="width: 200px;" src="../../../assets/landing/berliz.png" [routerLink]="['/home']">
         </div>
         <div *ngIf="menuStatus; else alignJustify">
             <div class="text-4xl cursor-pointer mx-2 md:hidden block">
