--- a/src/app/dashboard/admin/newsletters/newsletter-details/newsletter-details.component.html
+++ b/src/app/dashboard/admin/newsletters/newsletter-details/newsletter-details.component.html
@@ -1,4 +1,4 @@
-<div class="justify-center items-center mt-20 p-5 overflow-x-scroll">
+<div class="justify-center items-center mt-20 p-5 overflow-x-scroll bg-gray-200 rounded-lg">
     <div class="min-w-[300px]">
         <div class="grid grid-cols md:grid-cols-3 gap-5 mb-10">
             <div class="flex justify-start">
