--- a/src/app/dashboard/admin/partners/add-partner-modal/add-partner-modal.component.html
+++ b/src/app/dashboard/admin/partners/add-partner-modal/add-partner-modal.component.html
@@ -37,8 +37,8 @@
                 </div>
                 <div class="grid grid-cols-2 gap-1 flex items-center">
                     <div class="col-span-2 mx-auto">
-                        <select formControlName="email" class="w-full"
-                            class="w-64 md:w-full border-2 px-4 py-2 rounded-md m-2 col-span-2  hover:border-gray-400 focus:border-gray-400 focus:outline-none"
+                        <select formControlName="email"
+                            class="border-2 px-4 py-2 rounded-md m-2 col-span-2  hover:border-gray-400 focus:border-gray-400 focus:outline-none"
                             [ngClass]="{'border-red-400': addPartnerForm.get('email')?.invalid && addPartnerForm.get('email')?.dirty }"
                             placeholder="email" type="text">
                             <option selected hidden class="font-sans">Please select email</option>
