--- a/src/app/trainers/trainers-list/trainers-list.component.html
+++ b/src/app/trainers/trainers-list/trainers-list.component.html
@@ -1,51 +1,87 @@
+<span class="sr-only">Search</span>
+<div class="grid grid-cols-1">
+    <div class="flex justify-center items-center mt-10">
+        <input
+            class="placeholder:italic placeholder:text-gray-400 border border-gray-400 rounded-md py-1 px-4 hover:border-gray-500 hover:drop-shadow-2xl focus:border-gray-600 focus:outline-none cursor-pointer max-w-64"
+            placeholder="Search" [(ngModel)]="searchQuery">
+        <span class="cursor-pointer">
+            <i-feather name="Search" class="ml-2 text-gray-500" style="width: 28px;"></i-feather>
+        </span>
+    </div>
+    <div class="flex justify-center items-center cursor-pointer mt-2 -ml-8">
+        <h1 class="mr-2 text-gray-500">Select criteria</h1>
+        <select
+            class="cursor-pointer border border-gray-400 rounded-md hover:border-gray-500 hover:drop-shadow-2xl focus:border-gray-600 focus:outline-none text-gray-700">
+            <option class="text-gray-500" value="name">Name</option>
+            <option class="text-gray-500" value="category">Category</option>
+            <option class="text-gray-500" value="address">Address</option>
+        </select>
+    </div>
+</div>
+<div class="flex justify-center mt-5 gap-5 font-sans font-bold">
+    <div class="p-5">
+        Showing <span class="italic"> {{ counter }} </span> of
+        <span class="italic">{{ totalTrainers }}</span> results
+    </div>
+    <div class="p-5">
+        sorted by
+        <select [(ngModel)]="selectedSortOption" (change)="onSortOptionChange($event)"
+            class="italic text-sm cursor-pointer border border-gray-400 rounded-md  focus:outline-none text-gray-700">
+            <option class="text-gray-500" value="date">Date added</option>
+            <option class="text-gray-500" value="name">Name</option>
+            <option class="text-gray-500" value="categories">Categories</option>
+            <option class="text-gray-500" value="likes">Likes</option>
+        </select>
+    </div>
+</div>
 <section class="mx-auto mb-2 px-2 space-y-1 mt-40">
     <div class="grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1 gap-20">
         <section class="flex justify-between items-center cursor-pointer
                  transition-all duration-300 transform hover:scale-105 focus:scale-105 hover:drop-shadow-2xl"
-            *ngFor="let t of trainers; let i = index" [ngClass]="{ 'hidden' : i >= 12 && !showAllTrainers }">
+            *ngFor="let trainer of trainers; let i = index" [ngClass]="{ 'hidden' : i >= 12 && !showFullData }">
             <div class="w-full bg-gray-100 rounded-md aspect-square m-5 md:min-h-[750px]">
                 <div class="flex flex-col justify-center items-center">
-                    <img class="rounded-md object-cover" src="{{ t.photo }}">
+                    <img class="rounded-md object-cover" [src]="'data:image;base64, ' + trainer.photo">
                     <div class="p-2">
                         <p
                             class="text-center text-lg font-sans font-bold lg:text-xl text-red-600 text-transform: uppercase mt-3">
-                            {{ t.name }}
+                            {{ trainer.name }}
                         </p>
                         <p class="mt-1 text-sm text-center font-sans italic font-bold text-gray-600 p-1">
-                            <ng-container *ngFor="let category of t.categorySet; let ix = index">
-                                {{ category }} {{ ix < (t.categorySet.length - 1) ? "/" : "" }} </ng-container>
+                            <ng-container *ngFor="let category of trainer.categorySet; let ix = index">
+                                {{ category.name }} {{ ix < (trainer.categorySet.length - 1) ? "/" : "" }} </ng-container>
                         </p>
                         <p class="text-red-600 font-bold font-sans text-sm text-left p-2">
-                            + {{ t.experience }} experience
+                            + {{ trainer.experience }} years
                         </p>
                         <p class="text-gray-800 font-bold font-sans text-sm text-center p-2">
-                             {{ t.motto }}
+                            {{ trainer.motto }}
                         </p>
                         <p class="text-gray-600 font-bold italic font-sans text-sm text-right p-2">
-                            {{ t.address }}
-                       </p>
-                    </div>  
+                            {{ trainer.address }}
+                        </p>
+                    </div>
                     <div class="flex mt-2 text-left">
-                        <i-feather name="thumbs-up" style="width: 20px;" class="font-bold text-red-600 mr-4"></i-feather>
-                    <p class="mt-1 text-sm font-sans font-bold text-gray-600 text-right font-sans mb-2">
-                        {{ t.likes }} people like this trainer.
-                    </p>
-                </div>                     
+                        <i-feather name="thumbs-up" style="width: 20px;"
+                            class="font-bold text-red-600 mr-4"></i-feather>
+                        <p class="mt-1 text-sm font-sans font-bold text-gray-600 text-right font-sans mb-2">
+                            {{ trainer.likes }} people like this trainer.
+                        </p>
+                    </div>
                     <button class="m-4 text-sm  bg-red-600 text-gray-200 py-1 px-3 mt-3 hover:bg-red-700 hero-button font-sans
                 rounded-md transition-all duration-300 transform hover:scale-105 focus:scale-105">
-                <a [routerLink]="['/trainers', t.id]">
-                Know more
-            </a>
-            </button>
+                        <a [routerLink]="['/trainers', trainer.id, formatStringtoUrl(trainer.name)]">
+                            Know more
+                        </a>
+                    </button>
                 </div>
             </div>
         </section>
     </div>
     <div class="p-3" [ngClass]="{ 'hidden': trainers.length <= 12 }">
         <button
-            class="p-1 px-2 bg-gray-100 text-red-600 font-sans font-bold rounded-md mx-auto flex justify-center mt-2"
-        >
-            {{ !showAllTrainers ? 'See more' : 'See less' }}
+            class="p-1 px-2 bg-gray-100 text-red-600 font-sans font-bold rounded-md mx-auto flex justify-center mt-2">
+            {{ !showFullData ? 'See more' : 'See less' }}
         </button>
     </div>
 </section>
