modified navigation bar

--- a/src/app/landing/hero-section/hero-section.component.html
+++ b/src/app/landing/hero-section/hero-section.component.html
@@ -16,10 +16,10 @@
             <p class="lg:m-5 w-full text-center lg:text-xl font-bold text-md text-red-600 uppercase">
                 {{ h.title }}
             </p>
-            <P class="w-full text-center text-md lg:text-xl font-bold  uppercase ">
+            <P class="w-full text-center text-md lg:text-xl font-bold uppercase text-gray-950">
                 Become a member today
             </P>
-            <p class="text-sm w-full text-center font-sans">
+            <p class="text-sm w-full text-center font-sans text-gray-700 italic">
                 Unlock a World of Unlimited Services
             </p>
             <button class="text-sm lg:text-md bg-red-600 text-white py-1 px-3 mt-3 hover:bg-red-700 hero-button font-sans
