--- a/src/app/dashboard/admin/categories/category-details/category-details.component.html
+++ b/src/app/dashboard/admin/categories/category-details/category-details.component.html
@@ -17,40 +17,6 @@
                     </button>
                 </div>
             </div>
-            <div class="flex justify-center">
-                <span class="sr-only">Search</span>
-                <div class="grid grid-cols-1">
-                    <div class="flex justify-center items-center">
-                        <input class="placeholder:italic placeholder:text-gray-400 border border-gray-400 
-                                        rounded-md py-1 px-4 hover:border-gray-500 hover:drop-shadow-2xl focus:border-gray-600
-                                         focus:outline-none cursor-pointer max-w-64" placeholder="Search"
-                            [(ngModel)]="searchQuery">
-                        <span class="cursor-pointer">
-                            <i-feather name="Search" class="ml-2 text-gray-500" style="width: 28px;"></i-feather>
-                        </span>
-                    </div>
-                    <div class="flex justify-center items-center mt-2 -ml-8">
-                        <h1 class="mr-2 text-gray-500">Select criteria</h1>
-                        <select (change)="onSearchCriteriaChange($event)" class="cursor-pointer border border-gray-400 rounded-md hover:border-gray-500 
-                        hover:drop-shadow-2xl focus:border-gray-600 focus:outline-none text-gray-700">
-                            <option class="text-gray-500" value="name">Name</option>
-                            <option class="text-gray-500" value="id">Category id</option>
-                            <option class="text-gray-500" value="description">Description</option>
-                            <option class="text-gray-500" value="status">Status</option>
-                            <option class="text-gray-500" value="tag">Tag</option>
-                        </select>
-                    </div>
-                    <div class="flex justify-center items-center mt-5 gap-10 font-sans font-bold">
-                        <div>
-                            Showing <span class="italic"> {{ counter }} </span> of
-                            <span class="italic">{{ totalCategories }}</span> results
-                        </div>
-                        <div>
-                            sorted by<span class="italic"> {{ selectedSortOption }} </span>
-                        </div>
-                    </div>
-                </div>
-            </div>
             <div class="flex justify-end">
                 <div class="flex justify-center items-center cursor-pointer">
                     <button
@@ -79,7 +45,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let category of filteredCategoriesData; let i = index"
+                <tr *ngFor="let category of categoriesData; let i = index"
                     class="bg-gray-100 hover:bg-gray-200">
                     <td class="border-b border-gray-400 px-4 py-2">{{ i + 1 }}</td>
                     <td class="border-b border-gray-400 px-4 py-2">{{ category.name }}</td>
