--- a/src/app/landing/hero-section/hero-section.component.html
+++ b/src/app/landing/hero-section/hero-section.component.html
@@ -1,5 +1,5 @@
 <section class="px-1 bg-gray-100 p-1 hero rounded-md">
-    <div class="grid lg:grid-cols-2 items-center justify-items-center gap-5 cursor-pointer"
+    <div class="grid lg:grid-cols-2 items-center justify-items-center gap-5 cursor-pointer font-sans"
         *ngFor="let h of heroes; let i = index" [class.hidden]=" i !== heroIndex">
         <div class="order-2 lg:order-1 flex flex-col justify-center items-center 
         overflow-hidden transition-auto duration-3000 ease-in-out flex-none">
@@ -13,10 +13,10 @@
                     &#9658;
                 </a>
             </div>
-            <p class="lg:m-5 w-full text-center lg:text-xl font-bold text-md text-red-600 uppercase">
+            <p class="lg:m-5 w-full text-center font-bold text-md text-red-600 uppercase">
                 {{ h.title }}
             </p>
-            <P class="w-full text-center text-md lg:text-xl font-bold uppercase text-gray-950">
+            <P class="w-full text-center text-md font-bold uppercase text-gray-800">
                 Become a member today
             </P>
             <p class="text-sm w-full text-center font-sans text-gray-700 italic">
