--- a/src/app/navbar/navigation-bar/navigation-bar.component.html
+++ b/src/app/navbar/navigation-bar/navigation-bar.component.html
@@ -1,28 +1,28 @@
-<nav class="py-0 bg-white shadow flex items-center justify-between nav-menu w-full">
+<nav class="py-0 bg-white shadow-lg flex items-center justify-between nav-menu w-full">
     <div class="flex justify-between items-center w-full justify-end">
         <div class="text-xl font-sans cursor-pointer">
             <img style="width: 200px;" src="../../../assets/landing/berliz.png" [routerLink]="['/home']">
         </div>
         <div *ngIf="menuStatus; else alignJustify">
-            <div
-                class="md:hidden block mx-2 cursor-pointer hover:drop-shadow-2xl transition-all 
-                duration-1000 ease-in-out transform hover:scale-105 cursor-pointer border-2 border-gray-500 rounded-md p-1">
+            <div class="md:hidden block mx-2 cursor-pointer hover:drop-shadow-2xl transition-all 
+                duration-1000 ease-in-out transform hover:scale-105 cursor-pointer 
+                border-2 border-gray-500 rounded-md p-1 mr-4">
                 <i-feather name="x" class="min-w-[30px] text-gray-700  font-bold drop-shadow-xl"
                     (click)="navMenu('x')"></i-feather>
             </div>
         </div>
         <ng-template #alignJustify>
-            <div
-                class="md:hidden block mx-2 cursor-pointer hover:drop-shadow-2xl transition-all 
-                duration-1000 ease-in-out transform hover:scale-105 cursor-pointer border-2 border-gray-500 rounded-md p-1">
+            <div class="md:hidden block mx-2 cursor-pointer hover:drop-shadow-2xl transition-all
+                duration-1000 ease-in-out transform hover:scale-105 cursor-pointer 
+                border-2 border-gray-500 rounded-md p-1  mr-4">
                 <i-feather name="align-justify" (click)="navMenu('align-justify')"
                     class="min-w-[30px] text-gray-700  font-bold drop-shadow-xl"></i-feather>
             </div>
         </ng-template>
     </div>
     <ul class="md:flex md:items-center z-[-1] md:z-auto md:static absolute bg-white w-full 
-        left-0 md:w-auto md:py-0 py-1 md:pl-0 pl-7 top-[50px] 
-        transition duration-1000 ease-in-out "
+        left-0 md:w-auto md:py-0 py-1 md:pl-0 pl-7 top-[50px] md:opacity-100 opacity-0
+        transition-all duration-1000 ease-in-out transform menu-transition"
         [ngClass]="{'opacity-100': menuStatus, 'opacity-0 hidden': !menuStatus}">
         <li class="mx-8 my-5 md:my-0 hover:drop-shadow-2xl transition-all duration-300 
                 ease-in-out transform hover:scale-105 focus:scale-105">
