--- a/src/app/dashboard/user/profile/profile.component.html
+++ b/src/app/dashboard/user/profile/profile.component.html
@@ -8,7 +8,7 @@
         <label for="fileInput" class="absolute bottom-0 ml-36">
             <i-feather name="Camera" class="font-bold text-red-600 cursor-pointer"></i-feather>
         </label>
-        <input accept="image/*" type="file" formControlName="photo" id="fileInput" style="display: none;"
+        <input accept="image/*" type="file" id="fileInput" style="display: none;"
             (change)="onImgSelected($event, user.id)">
     </div>
     <div class="justify-between mt-4 font-sans flex flex-col justify-center items-center">
@@ -24,8 +24,6 @@
         <div
             class="flex items-center justify-center gap-1 md:gap-4 m-4  border-2 p-1 md:p-2 rounded-lg border-gray-200 shadow-sm font-bold text-md">
             0<span class="text-sm text-gray-400">Tasks</span>
-            <div class="border-l-2 h-4 border-gray-200"></div>
-            0<span class="text-sm text-gray-400">Membership</span>
             <div class="border-l-2 h-4 border-gray-200"></div>
             0<span class="text-sm text-gray-400">Subscriptions</span>
         </div>
@@ -62,11 +60,9 @@
                 <span class="font-bold">Date joined:</span> {{ formatDate(user.date) }}
             </div>
         </div>
-
-
         <button class="text-sm bg-red-600 text-white mt-6 py-1 mb-5 px-2 hover:bg-red-700 rounded-md font-sans mx-auto
         transition-all duration-300 transform hover:scale-105 focus:scale-105 hover:drop-shadow-2xl"><a
-                [routerLink]="['/profile/settings']">
+                [routerLink]="['/dashboard/profile/settings']">
                 Go to settings
             </a>
         </button>
