--- a/src/app/navbar/profile/profile.component.html
+++ b/src/app/navbar/profile/profile.component.html
@@ -41,13 +41,13 @@
             (click)="openChangePassword()">
             Change password
         </p>
-        <p class="p-1 mx-2 text-md cursor-pointer duration-300 hover:drop-shadow-4xl hover:text-red-600 hover:scale-105"
-            (click)="openUpdateUser()">
-            Edit Account
+        <p
+            class="p-1 mx-2 text-md cursor-pointer duration-300 hover:drop-shadow-4xl hover:text-red-600 hover:scale-105">
+            <a routerLink="/dashboard/profile"> Account information</a>
         </p>
         <p
             class="p-1 mx-2 text-md cursor-pointer duration-300 hover:drop-shadow-4xl hover:text-red-600 hover:scale-105">
-            <a routerLink="/dashboard/account"> Account Information</a>
+            <a routerLink="/dashboard/profile/settings"> Account settings</a>
         </p>
         <p
             class="p-1 mx-2 text-md cursor-pointer duration-300 hover:drop-shadow-4xl hover:text-red-600 hover:scale-105 flex items-center justify-center"
